# string-theory

./: .gitignore  README.md  pyproject.toml  run.sh
.claude/: settings.json
.github/workflows/: daily.yml
launchd/: com.ducmn.string-theory.caffeinate.plist  com.ducmn.string-theory.plist
src/string_theory/: broadcaster.py  calendar_push.py  conflicts.py  main.py  models.py  score.py  scrape.py
tests/: test_conflicts.py  test_scope.py  test_score.py
worker/: sofascore-proxy.js  wrangler.toml
