[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "string-theory"
version = "0.1.0"
description = "Daily ATP/WTA match curator that pushes watch-worthy upcoming matches to a Google Calendar."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Duc Nguyen" }]
keywords = ["tennis", "atp", "wta", "google-calendar", "sofascore"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "google-api-python-client>=2.120",
  "google-auth>=2.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
string-theory = "string_theory.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
